[package]
name = "wrench"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.5"
pest_derive = "2.5"
reqwest = { version = "0.11", default-features = false, features = ["gzip","rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
rayon = "1.6"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
tl = { version = "0.7", features = ["simd"] }
clap = { version = "4.0", features = ["derive", "env"]}
proc-macro2 = "1.0.49"
