[package]
name = "wrench"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
iter-chunks = "0.2"
pest_derive = "2.7"
reqwest = { version = "0.11", default-features = false, features = [
  "gzip",
  "rustls-tls",
  "json",
] }
tokio = { version = "1.36", features = ["full"] }
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
tl = { version = "0.7", features = [] }
clap = { version = "4.5", features = ["derive", "env"] }
proc-macro2 = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
